# discord-bot-framework

./: .env.example  .gitignore  Caddyfile  DEPLOYMENT.md  DISCORD_BOTS_CHEATSHEET.md  Dockerfile  README.md  SECURITY.md  SLASH_COMMANDS.md  config.example.json  docker-compose.yml  env.example  go.mod  go.sum  magefile.go  main.go  nginx.conf  pyproject.toml  renovate.json  tools.go  validate.py
.github/workflows/: ci.yml  security.yml
apps/clippy/: bot.go  main.go
apps/clippy/config/: config.go
apps/clippy/discord/: bot.go
apps/clippy/errors/: errors.go
apps/clippy/logging/: logger.go
apps/clippy/metrics/: metrics.go
apps/clippy_bot/: main.py  pyproject.toml
apps/clippy_bot/cogs/: unhinged_responses.py
apps/mtg-card-bot/: main.go
apps/mtg-card-bot/cache/: cache.go
apps/mtg-card-bot/config/: config.go
apps/mtg-card-bot/discord/: bot.go
apps/mtg-card-bot/logging/: logger.go
apps/mtg-card-bot/metrics/: metrics.go
apps/mtg-card-bot/scryfall/: client.go
apps/music/: audio.go  bot.go  extractor.go  main.go  queue.go  types.go
apps/music_bot/: main.py  pyproject.toml
apps/music_bot/cogs/: music_player.py
internal/bots/clippy/: bot.go
internal/bots/music/: bot.go  extractor.go  queue.go
internal/config/: config.go
internal/database/: database.go
internal/errors/: errors.go
internal/framework/: bot.go
internal/logging/: logger.go
k8s/base/: configmap.yaml  deployment.yaml  kustomization.yaml  pvc.yaml  secret.yaml  service.yaml  serviceaccount.yaml
k8s/overlays/production/: kustomization.yaml  namespace.yaml
libs/shared_utils/: __init__.py  base_bot.py  config_loader.py  database.py  health_check.py  help_system.py  pyproject.toml
monitoring/: alert_rules.yml  prometheus.yml
pkg/config/: config.go
pkg/discord/: discord.go
pkg/errors/: errors.go
pkg/logging/: logging.go
pkg/metrics/: metrics.go
pkg/monitoring/: monitoring.go
pkg/security/: security.go
scripts/: deploy.sh  install-ubuntu.sh  start-all.sh  stop-all.sh
systemd/: clippy-bot.service  install-services.sh  music-bot.service
tests/: test_integration.py  test_music_bot.py  test_shared_utils.py
