[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "discord-bot-framework"
version = "0.1.0"
description = "Discord bot framework with Clippy and Music bots"
authors = [
    {name = "dunamismax", email = "dunamismax@tutamail.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "py-cord>=2.6.1",
    "python-dotenv>=1.0.0",
    "aiosqlite>=0.20.0",
    "aiohttp>=3.9.0",
    "psutil>=5.9.0",
    "tenacity>=8.2.0",
]

[tool.hatchling.build.targets.wheel]
packages = ["libs/shared_utils"]

[project.optional-dependencies]
music = [
    "yt-dlp>=2024.1.0",
    "PyNaCl>=1.5.0",
    "aiofiles>=23.0.0",
]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "coverage>=7.0.0",
]

[tool.uv.workspace]
members = [
    "apps/clippy_bot",
    "apps/music_bot", 
    "libs/shared_utils"
]

[tool.ruff]
target-version = "py38"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by formatter
    "B008", # do not perform function calls in argument defaults
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["shared_utils"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"