# Discord Bot Framework - Monorepo configuration
# This is the root pyproject.toml for workspace management

[project]
name = "discord-bot-framework"
version = "0.1.0"
description = "Production-ready Discord bot framework"
requires-python = ">=3.12"
dependencies = [
    "py-cord>=2.4.0",
    "python-dotenv>=1.0.0",
    "aiofiles>=23.0.0",
    "aiosqlite>=0.19.0",
    "aiohttp>=3.8.0",
    "yt-dlp>=2024.1.0",
    "PyNaCl>=1.5.0",
    "tenacity>=8.0.0",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.1.0",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by formatter
    "B008", # do not perform function calls in argument defaults
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["shared_utils"]

