[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clippy-bot"
version = "0.1.0"
description = "Unhinged Microsoft Clippy Discord bot"
dependencies = [
    "py-cord>=2.4.0",
    "python-dotenv>=1.0.0",
    "shared-utils",
]
requires-python = ">=3.8"

[tool.uv.sources]
shared-utils = { workspace = true }