[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "music-bot"
version = "0.1.0"
description = "YouTube music bot for Discord voice channels"
dependencies = [
    "py-cord>=2.4.0",
    "python-dotenv>=1.0.0",
    "yt-dlp>=2024.1.0",
    "PyNaCl>=1.5.0",
    "aiofiles>=23.0.0",
    "shared-utils",
]
requires-python = ">=3.13"

[tool.hatchling.build.targets.wheel]
packages = ["main.py", "cogs"]

[tool.uv.sources]
shared-utils = { workspace = true }