[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shared-utils"
version = "0.1.0"
description = "Shared utilities for Discord bots"
dependencies = [
    "py-cord>=2.4.0",
    "python-dotenv>=1.0.0",
    "aiofiles>=23.0.0",
    "aiosqlite>=0.19.0",
    "aiohttp>=3.8.0",
]
requires-python = ">=3.8"